# ragflow-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESCRIPTION.md  DESCRIPTION_VI.md  Dockerfile  FEATURES.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PROJECT_INFO.md  README.md  pyproject.toml
.kiro/specs/ragflow-mcp-server/: design.md  requirements.md  tasks.md
examples/: .env.example  README.md  cursor_mcp_config.json  cursor_mcp_settings.json  docker-compose.yml  sample_document.txt  usage_examples.py
ragflow_mcp_server/: __init__.py  __main__.py  client.py  config.py  errors.py  models.py  server.py
tests/: README.md  __init__.py  run_all_tests.py  test_basic_functionality.py  test_comprehensive.py  test_file_operations.py  test_search_functionality.py
tests/integration/: test_end_to_end_workflows.py  test_mcp_compliance.py  test_mcp_integration.py  test_performance.py  test_ragflow_integration.py  test_simple_e2e.py  test_simple_performance.py
tests/unit/: test_client.py  test_config.py  test_error_scenarios.py  test_errors.py  test_models.py  test_server.py  test_validation.py
